--- a/wcite.yml
+++ b/wcite.yml
@@ -20,6 +20,7 @@ citekeys:
   Nelson1967: Q62071588 
   Nelson1974: Q5157448
   Nelson1980: Q15975218
+  Nelson1997: Q63197724
   Nelson1999: Q55888092
   Nelson2007: Q62018774 
   Nelson2008: Q5529815
