--- a/metadata.yml
+++ b/metadata.yml
@@ -35,7 +35,7 @@ classoption:
   - format=sigconf
   - review=true
   - timestamp=true
-#  - authordraft=true
+  - authordraft=true
 biblio-style: ACM-Reference-Format
 
 fontfamily: amsmath # prevent lmodern to be loaded
