--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,11 +5,24 @@ author:
   email: jakob.voss@gbv.de
   orcid: 0000-0002-7613-4123
   affiliation: Verbundzentrale des GBV (VZG)
-date: 2019-06-21
+
+repository: https://github.com/jakobib/hypertext2019/
+
 created: 2019-04-17
 license:
   label: CC BY 4.0
   uri: https://creativecommons.org/licenses/by/4.0/
+
+version: 0.1.1
+date: 2019-06-22
+status: "Rejected from HT'2019: ACM Conference on Hypertext and Social Media"
+
+changelog:
+- version: 0.1.0
+  date: 2019-05-02
+  status: "Submitted to HT'2019: ACM Conference on Hypertext and Social Media"
+
+canonical: https://jakobib.github.io/hypertext2019/
 
 abstract: |
     This paper presents a novel and formal interpretation of the original vision
@@ -39,7 +52,4 @@ ccsdesc:
   - relevance: 100
     class: Human-centered computing\ Hypertext / hypermedia
     url: https://dlnext.acm.org/topic/ccs2012/10003120.10003121.10003124.10003254
-
-status: "Submitted to HT'2019: ACM Conference on Hypertext and Social Media, September 17--20, 2019, Hof"
-repository: https://github.com/jakobib/hypertext2019/
 ...
