Add reviews and my reply

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,8 +14,8 @@ license:
   uri: https://creativecommons.org/licenses/by/4.0/
 
 version: 0.1.1
-date: 2019-06-22
-status: "Rejected from HT'2019: ACM Conference on Hypertext and Social Media"
+date: 2019-06-24
+status: "Rejected from HT'2019 (anonymous reviews and spelling corrections included)"
 
 changelog:
 - version: 0.1.0
