Fix number of pages

--- a/interactions.yaml
+++ b/interactions.yaml
@@ -39,7 +39,7 @@ interactions:
   date: 2019-06-24
   content: |
     Thanks for the reviews. I tried to squeeze the whole idea into a short paper
-    of two pages (PDF version) which turned out to be too dense. The reviews point
+    of four pages (PDF version) which turned out to be too dense. The reviews point
     out that "the paper tries to do too much" and the authors should
     "focus on what they feel is the most important contribution of the work".
     Ironically a similar lack of focus, partly caused by the extend of his vision,
