--- a/wcite.yaml
+++ b/wcite.yaml
@@ -9,6 +9,8 @@ citekeys:
   Csillag2013: Q62820096
   DiIorio2005: Q61637727
   Furner2016: Q61793433
+  Gronbaeck1996: Q64859552
+  Halasz1990: Q64854247
   IIIFImageAPI: Q62087795
   Kent1989: Q62475820
   Lukka2002: Q61974405
